--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:16.0.1'
 
     compile 'com.android.support:support-annotations:27.1.1'
+
+   compile 'com.google.firebase:firebase-auth:16.0.2'
 }
 apply plugin: 'com.google.gms.google-services'
