--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,6 @@ dependencies {
     compile 'com.android.support:support-annotations:27.1.1'
 
    compile 'com.google.firebase:firebase-auth:16.0.2'
+    implementation 'com.firebaseui:firebase-ui-auth:4.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
