--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
 
 
     </uses-permission>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE">
 
+    </uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
